--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Knewave&family=Open+Sans&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
+    <link
+        href="https://fonts.googleapis.com/css2?family=Knewave&family=Open+Sans&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Parallax</title>
+    <title>Parallax Project</title>
 </head>
 
 <body>
@@ -19,10 +20,9 @@
             <section class="module parallax parallax-1">
                 <h1 id="title">Naruto Uzumaki</h1>
             </section>
-
             <section class="module content">
                 <div class="container">
-                    <h2>O início.</h2>
+                    <h2>O início</h2>
                     <p>Um monstro poderoso conhecido como a Raposa de Nove Caudas atacou a vila ninja conhecida como
                         Konoha, matando várias pessoas. Em resposta, o líder da Vila o Quarto Hokage selou o monstro
                         dentro de seu filho recém-nascido, Naruto Uzumaki tal ato custou sua vida. Quando criança,
@@ -39,10 +39,9 @@
             <section class="module parallax parallax-2">
                 <h1>A batalha de Naruto</h1>
             </section>
-
             <section class="module content">
                 <div class="container">
-                    <h2>A batalha de Naruto.</h2>
+                    <h2>A batalha de Naruto</h2>
                     <p>Dois anos e meio depois, Naruto volta de seu treinamento com Jiraiya, e a organização criminosa
                         chamada Akatsuki, a qual Itachi é um membro, começam a sequestrar os Jinchūrikis, das nove
                         poderosas Bijūs. Vários ninjas da Vila da Folha, incluindo o Time 7, lutaram contra seus membros
@@ -62,17 +61,15 @@
                         mestre e tomar conhecimento do provável ataque para capturar a Bijū de Nove Caudas, Naruto
                         começa seu treinamento Sennin. Nesse meio tempo, Pain invade e destrói a Vila da Folha. No
                         entanto, Naruto retorna e o derrota, ganhando respeito e admiração da aldeia, passando a ser
-                        conhecido como “O Herói de Konoha”.</p>
+                        conhecido como “O Herói de Konoha”.
                 </div>
             </section>
-
             <section class="module parallax parallax-3">
                 <h1>O Herói</h1>
             </section>
-
             <section class="module content">
                 <div class="container">
-                    <h2>O Herói.</h2>
+                    <h2>O Herói</h2>
                     <p>Com a morte de Nagato, Tobi, disfarçado como um dos fundadores da Folha, Madara Uchiha, anuncia
                         que planeja obter todas as Bijūs a fim de realizar uma ilusão poderosa o suficiente para
                         controlar toda a humanidade; é o plano “Olho da Lua”. Os Kages das cinco vilas ninjas se recusam
@@ -94,12 +91,15 @@
                         quase matarem um ao outro em uma batalha descomunal, Sasuke admite sua derrota e se redime por
                         todas as decisões erradas que tomou. Após a guerra, Kakashi é escolhido como o Sexto Hokage e
                         concede perdão a Sasuke por seus crimes. Anos mais tarde, Kakashi se aposenta e Naruto assume
-                        seu posto, tornando-se o Sétimo Hokage.</p>
+                        seu posto, tornando-se o Sétimo Hokage.
                 </div>
             </section>
 
+
+
         </main>
     </div>
+
 </body>
 
 </html>
